--- a/style/scss/user-settings.scss
+++ b/style/scss/user-settings.scss
@@ -66,7 +66,7 @@
         &.danger {
           color: var(--col-u-danger-dark);
 
-          @include utils.hover {
+          &:hover {
             background: var(--col-white-element);
             color: var(--col-u-danger-dark);
             cursor: pointer;
@@ -78,7 +78,7 @@
           }
         }
 
-        @include utils.hover {
+        &:hover {
           background: var(--col-white-element);
           color: var(--col-secondary);
           cursor: pointer;
@@ -108,6 +108,8 @@
         flex-direction: row;
         gap: 2rem;
         align-items: center;
+        flex-wrap: wrap;
+        row-gap: .5rem;
       }
 
       &.force-column {
@@ -137,8 +139,12 @@
   }
 
   .fixedinfo, .settings-wrapper {
-    padding: 1.5rem 2rem;
     border-radius: 15px;
+    padding: .85rem 1.15rem;
+
+    @media screen and (min-width: utils.$bp-tablet) {
+      padding: 1.5rem 2rem;
+    }
   }
 
   .s-nothing, .s-404 {
@@ -166,7 +172,18 @@
 }
 
 .user {
-  h1,h2,h3,h4,h5,h6 {
+  h1, h2, h3, h4, h5, h6 {
     margin: 0;
+  }
+}
+
+.delete-page {
+  button {
+    margin-top: 1.5rem;
+    width: 100%;
+
+    @media screen and (min-width: utils.$bp-tablet) {
+      width: unset;
+    }
   }
 }
